1.0.10 (unreleased)
===================
  - Add granulate interface.

1.0.9
=====
  - use pkg_resources to get helper scripts.
  - move internal scripts to helper folder.
  - removed cloudooo as dependency of internal scripts.
  - modified way that the filters of OpenOffice.org are passed.

1.0.8
=====
  - Remove all attributes that works with cloudooo script paths.
  - Use all scripts according to your python eggs.
  - Fixed problem when a spreadsheet will be converted to html.  

1.0.7
=====
  - Remove entry points, treat those as ordinary files.
  - Search all script files using pkg_resources.