@@ -1,5 +1,6 @@
 1.0.10 (unreleased)
 ===================
+  - Add OdfDocument
   - Add granulate interface.
 
 1.0.9
@@ -13,9 +14,10 @@
 =====
   - Remove all attributes that works with cloudooo script paths.
   - Use all scripts according to your python eggs.
-  - Fixed problem when a spreadsheet will be converted to html.  
+  - Fixed problem when a spreadsheet will be converted to html.
 
 1.0.7
 =====
   - Remove entry points, treat those as ordinary files.
   - Search all script files using pkg_resources.
+
